# Whole-Slide_vs_TMA_Sampling

./: README.md  _version.py  functions  load_sim_data  pyproject.toml  requirements.txt
Whole-Slide_vs_TMA_Sampling/src/SimuSamp/scripts/: hpy_tertiles.ipynb
python/functions/: compute_hpfs.py  hpf_density_histograms.py  load_sim_data.py  n_core_sampler.py  sample_hpfs.py
src/SimSampler/functions/: load_data.py  normalize_cores.py  sim_data.py
src/SimSampler/new_funcs/compute/: compute_hpfs.py
src/SimSampler/new_funcs/load/: SpatDat.py  spat.ipynb
src/SimuSamp/functions/: eta_counter.py  percent_tumour_area_from_depth
src/SimuSamp/functions/compute/: core_sample.py  hopkins_stat.py  n_core_sampler.py  n_neighbours.py  poisson.py  test.ipynb
src/SimuSamp/functions/load/: SpatDat.py  load_tma_data.py  subset_cells.py  subset_cores.py
src/SimuSamp/new_funcs/compute/: compute_hpfs.py  hopkins_stat.py  n_core_sampler.py  n_core_sampler_original.py  sampled_cores.xlsx  test.ipynb
src/SimuSamp/new_funcs/load/: SpatDat.py  load_data.py  subset_annotations.py  subset_cells.py
src/SimuSamp/new_funcs/plot/: hpf_histogram.py  hpf_ranked_histogram.py
src/SimuSamp/scripts/: SpatDat_Test.ipynb  TMA_WS_comparison.ipynb  TMAvsWS.ipynb  WS_probability_plots.ipynb  WS_simulated_TMA_sampling.ipynb  WS_vs_simulated_TMA.ipynb  actual_TMA_NNdists.ipynb  actual_TMA_vs_WS.ipynb  hpf_tertiles.ipynb  probability_plots.ipynb  simulated_TMA.ipynb  simulated_TMA_sampling.py  simulated_TMA_sampling_2025.ipynb  spatial_point_patterns.ipynb  wholeslide_stats.ipynb
