[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "SimuSamp"
description = ""

authors = [{name = "MF"}]
maintainers = [{name = "Michael Fotheringham", email = "16mrf6@queensu.ca"}]

dynamic = ["version"]

# license = {file = "LICENSE"}
readme = "README.md"

dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "seaborn",
    "shapely",
    "geopandas",
    "astropy",
    "alphashape",
    "pointpats",
    "statsmodels",
    "scikit-learn",
]

[project.optional-dependencies]
docs = [
    "ipykernel",
]
test = [
    "black",
    "flake8",
    "pylint",
    "pytest",
    "pylint-pytest",
]

[tool.black]
line-length = 80

[tool.hatch.build.targets.wheel]
packages = ["src/SimuSamp"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true